--- a/index.html
+++ b/index.html
@@ -3,3 +3,8 @@
 <p>很高兴你来到这里,你可以通过这些方式找到我</p>
 <p>邮箱:hunjingqi@outlook.com</p>
 <p>微信号:hjq97hjq97</p>
+
+<ul>
+  <li> <a href="https://www.html5tricks.com/demo/jiaoben1765/index.html">中国象棋</a> </li>
+  <li> <a href="https://www.html5tricks.com/demo/html5-pcman/index.html">吃豆人</a> </li>
+</ul>
