--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@
 
 <ul>
   <li> <a href="https://www.html5tricks.com/demo/jiaoben1765/index.html">中国象棋</a> </li>
-  <li> <a href="https://www.html5tricks.com/demo/html5-pcman/index.html">吃豆人</a> </li>
+  <li> <a href="https://passer-by.com/pacman/">吃豆人</a> </li>
 </ul>
