--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<p>Hello</p>
-<p>我是HJQ Bit</p>
-<p>很高兴你来到这里,你可以通过这些方式找到我</p>
+<p>Hi,很高兴见到你,我是HJQ</p>
+<p>联系方式:</p>
 <p>邮箱:hunjingqi@outlook.com</p>
 <p>微信号:hjq97hjq97</p>
+<p>休息一下:</p>
 
 <ul>
   <li> <a href="https://www.html5tricks.com/demo/jiaoben1765/index.html">中国象棋</a> </li>
