--- a/index.html
+++ b/index.html
@@ -8,3 +8,9 @@
   <li> <a href="https://www.html5tricks.com/demo/jiaoben1765/index.html">中国象棋</a> </li>
   <li> <a href="https://passer-by.com/pacman/">吃豆人</a> </li>
 </ul>
+
+<div class="button01">
+      <a href="#">Download</a>
+      <p class="top">click to begin</p>
+      <p class="bottom">1.2MB .zip</p>
+</div>
