--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
 <p>Hi,很高兴见到你,我是HJQ</p>
+<p>让我们从输入开始</p>
+<p>你叫什么名字</p>
+
+ <div>
+     <input id="loginname" type="text"  placeholder="someone"/>
+</div>
+
+<div id="entry" class="item item-fore2">
+    <input type="text" id="nloginpwd"  placeholder="输入具体信息以便我更好地认识你"/>
+    <span >大小写锁定已打开</span>
+</div>
+
 <p>联系方式:</p>
 <p>邮箱:hunjingqi@outlook.com</p>
 <p>微信号:hjq97hjq97</p>
@@ -8,9 +20,3 @@
   <li> <a href="https://www.html5tricks.com/demo/jiaoben1765/index.html">中国象棋</a> </li>
   <li> <a href="https://passer-by.com/pacman/">吃豆人</a> </li>
 </ul>
-
-<div class="button01">
-      <a href="#">Download</a>
-      <p class="top">click to begin</p>
-      <p class="bottom">1.2MB .zip</p>
-</div>
