--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 </div>
 
 <div id="entry" class="item item-fore2">
-    <input type="text" id="nloginpwd"  placeholder="输入具体信息以便我更好地认识你"/>
-    <span >大小写锁定已打开</span>
+    <input type="text" id="nloginpwd"  placeholder="让我更好地认识你"/>
 </div>
+
+<input type="submit" />
 
 <p>联系方式:</p>
 <p>邮箱:hunjingqi@outlook.com</p>
