--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <p>你叫什么名字</p>
 
  <div>
-     <input id="loginname" type="text"  placeholder="someone"/>
+     <input id="loginname" type="text"  placeholder="某人"/>
 </div>
 
 <div id="entry" class="item item-fore2">
@@ -20,4 +20,7 @@
 <ul>
   <li> <a href="https://www.html5tricks.com/demo/jiaoben1765/index.html">中国象棋</a> </li>
   <li> <a href="https://passer-by.com/pacman/">吃豆人</a> </li>
+  <li> <a href="https://www.crazygames.com/">3D web</a> </li>
+  <li> <a href="https://tetris.com/play-tetris">俄罗斯方块</a> </li>
+  <li> <a href="https://bruno-simon.com/"></a>3D car</li>
 </ul>
