--- a/index.html
+++ b/index.html
@@ -23,5 +23,5 @@
   <li> <a href="https://www.crazygames.com/">3D web</a> </li>
   <li> <a href="https://tetris.com/play-tetris">俄罗斯方块</a> </li>
   <li> <a href="https://bruno-simon.com/">3D car1</a> </li>
-  <li> <a href=“http://hexgl.bkcore.com/play/”>3D car2</a> </li>
+  <li> <a href="http://hexgl.bkcore.com/play/">3D car2</a> </li>
 </ul>
