--- a/index.html
+++ b/index.html
@@ -26,4 +26,9 @@
   <li> <a href="http://hexgl.bkcore.com/play/">3D car2</a> </li>
 </ul>
 
-<p>                                          HJQ Website Insider Preview Version 0.1.1</p>
+<p>HJQ Website Insider Preview Version 0.1.1</p>
+<p>有本事来找茬:</p>
+
+<ul>
+  <li> 奶酪越多洞越多，洞越多奶酪越少，所以奶酪越多，奶酪越少 </li>
+</ul>
