--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
   <li> <a href="http://hexgl.bkcore.com/play/">3D car2</a> </li>
 </ul>
 
-<p>HJQ Website Insider Preview Version 0.1.1</p>
 <p>有本事来找茬:</p>
 
 <ul>
   <li> 奶酪越多洞越多，洞越多奶酪越少，所以奶酪越多，奶酪越少 </li>
+  <li> 作业越多，写得越多，写得越多，作业越少，所以作业越多，作业越少 </li>
 </ul>
+
+<p>HJQ Website Insider Preview Version 0.1.1    You are welcome to join us</p>
