--- a/index.html
+++ b/index.html
@@ -15,6 +15,20 @@
 <p>联系方式:</p>
 <p>邮箱:hunjingqi@outlook.com</p>
 <p>微信号:hjq97hjq97</p>
+
+<p>实用网站:</p>
+
+<ul>
+  <li> <a href="https://jts.egg404.cn/#/">检讨必备</a> </li>
+  <li> <a href="https://cmwtat.cloudmoe.com/cn.html">激活系统</a> </li>
+  <li> <a href="https://otp.landian.vip/zh-cn/">Office激活</a> </li>
+  <li> <a href="https://www.jiligamefun.com/486634.html">白嫖宇宙沙盘</a> </li>
+  <li> <a href="https://www.remove.bg/zh/upload">一键抠图</a> </li>
+  <li> <a href="http://www.rubik.com.cn/">魔方小站</a> </li>
+  <li> <a href="https://www.wrfou.com/hacknet.html">白嫖Hacknet</a> </li>
+  <li> <a href="https://space.bilibili.com/17655178/channel/collectiondetail?sid=119643">《了解》量子场论</a> </li>
+  
+
 <p>休息一下:</p>
 
 <ul>
@@ -33,4 +47,4 @@
   <li> 作业越多，写得越多，写得越多，作业越少，所以作业越多，作业越少 </li>
 </ul>
 
-<p>HJQ Website Insider Preview Version 0.1.2    You are welcome to join us</p>
+<p>HJQ Website Insider Preview Version 0.1.3    欢迎投稿(你的大名会在网站上哦)，每周一更</p>
