--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <p>Hi,很高兴见到你,我是HJQ</p>
 <p>让我们从输入开始</p>
-<p>你叫什么名字</p>
+<p>你是哪根葱</p>
 
  <div>
-     <input id="loginname" type="text"  placeholder="某人"/>
+     <input id="loginname" type="text"  placeholder="某根葱"/>
 </div>
 
 <div id="entry" class="item item-fore2">
@@ -16,35 +16,30 @@
 <p>邮箱:hunjingqi@outlook.com</p>
 <p>微信号:hjq97hjq97</p>
 
+<p>投稿区</p>
+
 <p>实用网站:</p>
 
 <ul>
   <li> <a href="https://jts.egg404.cn/#/">检讨必备</a> </li>
   <li> <a href="https://cmwtat.cloudmoe.com/cn.html">激活系统</a> </li>
-  <li> <a href="https://otp.landian.vip/zh-cn/">Office激活</a> </li>
-  <li> <a href="https://www.jiligamefun.com/486634.html">白嫖宇宙沙盘</a> </li>
+  <li> <a href="https://otp.landian.vip/zh-cn/">Office Tool Plus</a> </li>
+  <li> <a href="https://www.jiligamefun.com/486634.html">白嫖宇宙沙盘——何骁宁提供(联系方式:SLA3D@outlook.com)</a> </li>
   <li> <a href="https://www.remove.bg/zh/upload">一键抠图</a> </li>
   <li> <a href="http://www.rubik.com.cn/">魔方小站</a> </li>
   <li> <a href="https://www.wrfou.com/hacknet.html">白嫖Hacknet</a> </li>
   <li> <a href="https://space.bilibili.com/17655178/channel/collectiondetail?sid=119643">《了解》量子场论</a> </li>
-  
+  <li> <a herf="https://www.thingiverse.com/">3D制作讨论站点</a> </li>
 
-<p>休息一下:</p>
+<p>"学习"网站:</p>
 
 <ul>
   <li> <a href="https://www.html5tricks.com/demo/jiaoben1765/index.html">中国象棋</a> </li>
   <li> <a href="https://passer-by.com/pacman/">吃豆人</a> </li>
-  <li> <a href="https://www.crazygames.com/">3D web</a> </li>
+  <li> <a href="https://www.crazygames.com/">3D集合“学习”网</a> </li>
   <li> <a href="https://tetris.com/play-tetris">俄罗斯方块</a> </li>
-  <li> <a href="https://bruno-simon.com/">3D car1</a> </li>
-  <li> <a href="http://hexgl.bkcore.com/play/">3D car2</a> </li>
+  <li> <a href="https://bruno-simon.com/">休闲赛车</a> </li>
+  <li> <a href="http://hexgl.bkcore.com/play/">竞速赛车</a> </li>
 </ul>
 
-<p>有本事来找茬:</p>
-
-<ul>
-  <li> 奶酪越多洞越多，洞越多奶酪越少，所以奶酪越多，奶酪越少 </li>
-  <li> 作业越多，写得越多，写得越多，作业越少，所以作业越多，作业越少 </li>
-</ul>
-
-<p>HJQ Website Insider Preview Version 0.1.3    欢迎投稿(你的大名会在网站上哦)，每周一更</p>
+<p>HJQ Website Insider Preview Version 0.1.3    欢迎加入与我一起开发网站和投稿(什么题材都行，只要过审，适当给予稿费)</p>
