--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <li> <a href="http://www.rubik.com.cn/">魔方小站</a> </li>
   <li> <a href="https://www.wrfou.com/hacknet.html">白嫖Hacknet</a> </li>
   <li> <a href="https://space.bilibili.com/17655178/channel/collectiondetail?sid=119643">《了解》量子场论</a> </li>
-  <li> <a herf="https://www.thingiverse.com/">3D制作讨论站点</a> </li>
+  <li> <a href="https://www.thingiverse.com/">3D讨论站点</a> </li>
 
 <p>"学习"网站:</p>
 
