--- a/index.html
+++ b/index.html
@@ -24,22 +24,27 @@
   <li> <a href="https://jts.egg404.cn/#/">检讨必备</a> </li>
   <li> <a href="https://cmwtat.cloudmoe.com/cn.html">激活系统</a> </li>
   <li> <a href="https://otp.landian.vip/zh-cn/">Office Tool Plus</a> </li>
-  <li> <a href="https://www.jiligamefun.com/486634.html">白嫖宇宙沙盘——何骁宁提供(联系方式:SLA3D@outlook.com)</a> </li>
+  <li> <a href="https://www.jiligamefun.com/486634.html">白嫖宇宙沙盘————由何骁宁提供(联系方式:SLA3D@outlook.com)</a> </li>
   <li> <a href="https://www.remove.bg/zh/upload">一键抠图</a> </li>
   <li> <a href="http://www.rubik.com.cn/">魔方小站</a> </li>
   <li> <a href="https://www.wrfou.com/hacknet.html">白嫖Hacknet</a> </li>
   <li> <a href="https://space.bilibili.com/17655178/channel/collectiondetail?sid=119643">《了解》量子场论</a> </li>
-  <li> <a href="https://www.thingiverse.com/">3D讨论站点</a> </li>
+  <li> <a href="https://www.thingiverse.com/">3D讨论站点1</a> </li>
+  <li> <a href="https://thangs.com/">3D讨论站点2</a> </li>
+  <li> <a href="https://wwsj9688.xyz/">vpn之西部世界</a> </li>
+  <li> <a href="https://www.kaspersky.com.tw/downloads/free-vpn-secure-connection">vpn之卡巴斯基</a> </li>
 
-<p>"学习"网站:</p>
+</ul>
+ 
+ <p>"学习"网站:</p>
 
 <ul>
   <li> <a href="https://www.html5tricks.com/demo/jiaoben1765/index.html">中国象棋</a> </li>
   <li> <a href="https://passer-by.com/pacman/">吃豆人</a> </li>
-  <li> <a href="https://www.crazygames.com/">3D集合“学习”网</a> </li>
+  <li> <a href="https://www.crazygames.com/">“学习”集合网</a> </li>
   <li> <a href="https://tetris.com/play-tetris">俄罗斯方块</a> </li>
   <li> <a href="https://bruno-simon.com/">休闲赛车</a> </li>
   <li> <a href="http://hexgl.bkcore.com/play/">竞速赛车</a> </li>
 </ul>
 
-<p>HJQ Website Insider Preview Version 0.1.4    欢迎加入与我一起开发网站和投稿(什么题材都行，只要过审，适当给予稿费)</p>
+<p>HJQ Website Insider Preview Version 0.1.4    欢迎加入与我一起开发网站和投稿(什么题材都行，只要过审，即可发表)</p>
