--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
   <li> <a href="https://thangs.com/">3D讨论站点2</a> </li>
   <li> <a href="https://wwsj9688.xyz/">vpn之西部世界</a> </li>
   <li> <a href="https://www.kaspersky.com.tw/downloads/free-vpn-secure-connection">vpn之卡巴斯基</a> </li>
+  <li> <a href="https://www.doc88.com/p-2902515598238.html">Python编程_从入门到实践</a> </li>
 
 </ul>
  
