--- a/index.html
+++ b/index.html
@@ -42,10 +42,11 @@
 <ul>
   <li> <a href="https://www.html5tricks.com/demo/jiaoben1765/index.html">中国象棋</a> </li>
   <li> <a href="https://passer-by.com/pacman/">吃豆人</a> </li>
-  <li> <a href="https://www.crazygames.com/">“学习”集合网</a> </li>
+  <li> <a href="https://www.crazygames.com/">多维“学习”集合网</a> </li>
   <li> <a href="https://tetris.com/play-tetris">俄罗斯方块</a> </li>
   <li> <a href="https://bruno-simon.com/">休闲赛车</a> </li>
   <li> <a href="http://hexgl.bkcore.com/play/">竞速赛车</a> </li>
+  <li> <a href="https://poki.cn/">经典“学习”集合网</a> </li>
 </ul>
 
 <p>HJQ Website Insider Preview Version 0.1.5    欢迎加入与我一起开发网站和投稿(什么题材都行，只要过审，即可发表)</p>
