--- a/index.html
+++ b/index.html
@@ -13,24 +13,21 @@
 <input type="submit" />
 
 <p>联系方式:</p>
-<p>邮箱:hunjingqi@outlook.com</p>
-<p>微信号:hjq97hjq97</p>
+<p>邮箱:hunjingqi@outlook.com(推荐！隐秘性高,可以更好地"礼貌会面")</p>
+<p>微信号:hjq97hjq97(不推荐!容易被家长和谐)</p>
 
 <p>投稿区</p>
+
 
 <p>实用网站:</p>
 
 <ul>
   <li> <a href="https://jts.egg404.cn/#/">检讨必备</a> </li>
-  <li> <a href="https://cmwtat.cloudmoe.com/cn.html">激活系统</a> </li>
-  <li> <a href="https://otp.landian.vip/zh-cn/">Office Tool Plus</a> </li>
   <li> <a href="https://www.jiligamefun.com/486634.html">白嫖宇宙沙盘————由何骁宁提供(联系方式:SLA3D@outlook.com)</a> </li>
   <li> <a href="https://www.remove.bg/zh/upload">一键抠图</a> </li>
   <li> <a href="http://www.rubik.com.cn/">魔方小站</a> </li>
   <li> <a href="https://www.wrfou.com/hacknet.html">白嫖Hacknet</a> </li>
   <li> <a href="https://space.bilibili.com/17655178/channel/collectiondetail?sid=119643">《了解》量子场论</a> </li>
-  <li> <a href="https://www.thingiverse.com/">3D讨论站点1</a> </li>
-  <li> <a href="https://thangs.com/">3D讨论站点2</a> </li>
   <li> <a href="https://wwsj9688.xyz/">vpn之西部世界</a> </li>
   <li> <a href="https://www.kaspersky.com.tw/downloads/free-vpn-secure-connection">vpn之卡巴斯基</a> </li>
   <li> <a href="https://www.doc88.com/p-2902515598238.html">Python编程_从入门到实践</a> </li>
@@ -44,9 +41,11 @@
   <li> <a href="https://passer-by.com/pacman/">吃豆人</a> </li>
   <li> <a href="https://www.crazygames.com/">多维“学习”集合网</a> </li>
   <li> <a href="https://tetris.com/play-tetris">俄罗斯方块</a> </li>
-  <li> <a href="https://bruno-simon.com/">休闲赛车</a> </li>
-  <li> <a href="http://hexgl.bkcore.com/play/">竞速赛车</a> </li>
+  <li> <a href="https://bruno-simon.com/">休闲"小练习"</a> </li>
+  <li> <a href="http://hexgl.bkcore.com/play/">竞速"小练习"</a> </li>
   <li> <a href="https://poki.cn/">经典“学习”集合网</a> </li>
 </ul>
+
+<p>都看到这里了，还不给我反馈和投稿吗，我还有很多软件可以让你装。</p>
 
 <p>HJQ Website Insider Preview Version 0.1.5    欢迎加入与我一起开发网站和投稿(什么题材都行，只要过审，即可发表)</p>
