--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <input type="submit" />
 
 <p>联系方式:</p>
-<p>邮箱:hunjingqi@outlook.com(推荐！隐秘性高,可以更好地"礼貌会面")</p>
+<p>邮箱:hunjingqi@outlook.com(推荐！隐秘性高,可以更好地"礼貌会面") <a href="https://www.microsoft.com/zh-cn/microsoft-365/outlook/email-and-calendar-software-microsoft-outlook/">注册outlook邮箱(由于微软服务器太慢，请耐心等待)</a> </p>
 <p>微信号:hjq97hjq97(不推荐!容易被家长和谐)</p>
 
 <p>投稿区</p>
@@ -23,7 +23,7 @@
 
 <ul>
   <li> <a href="https://jts.egg404.cn/#/">检讨必备</a> </li>
-  <li> <a href="https://www.jiligamefun.com/486634.html">白嫖宇宙沙盘————由何骁宁提供(联系方式:SLA3D@outlook.com)</a> </li>
+  <li> <a href="https://www.jiligamefun.com/486634.html">白嫖宇宙沙盘——由何骁宁提供(联系方式:SLA3D@outlook.com)</a> </li>
   <li> <a href="https://www.remove.bg/zh/upload">一键抠图</a> </li>
   <li> <a href="http://www.rubik.com.cn/">魔方小站</a> </li>
   <li> <a href="https://www.wrfou.com/hacknet.html">白嫖Hacknet</a> </li>
