--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
   <li> <a href="https://poki.cn/">经典“学习”集合网</a> </li>
 </ul>
 
-<p>热烈庆祝本网站成立一周月，先推出巨大优惠，只要用邮箱给我发一条信息或投稿便可获得随机软件安装包一份</p>
+<p>热烈庆祝本网站成立一周月，现推出巨大优惠，只要用邮箱给我发一条信息或投稿便可获得随机软件安装包一份</p>
 
 <p>HJQ Website Insider Preview Version 0.1.6    欢迎加入与我一起开发网站和投稿(什么题材都行，只要过审，即可发表)</p>
