--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <input type="submit" />
 
-<p>联系方式:</p>
-<p>邮箱:hunjingqi@outlook.com(推荐！隐秘性高,可以更好地"礼貌会面") <a href="https://www.microsoft.com/zh-cn/microsoft-365/outlook/email-and-calendar-software-microsoft-outlook/">注册outlook邮箱(由于微软服务器太慢，请耐心等待)</a> </p>
+<p>海内存知己，天涯若比邻:</p>
+<p>邮箱:hunjingqi@outlook.com(推荐！隐秘性高,可以更好地"友好会面") <a href="https://www.microsoft.com/zh-cn/microsoft-365/outlook/email-and-calendar-software-microsoft-outlook/">注册outlook邮箱(由于微软服务器太慢，请耐心等待)</a> </p>
 <p>微信号:hjq97hjq97(不推荐!容易被家长和谐)</p>
 
 <p>投稿区</p>
@@ -28,10 +28,7 @@
   <li> <a href="http://www.rubik.com.cn/">魔方小站</a> </li>
   <li> <a href="https://www.wrfou.com/hacknet.html">白嫖Hacknet</a> </li>
   <li> <a href="https://space.bilibili.com/17655178/channel/collectiondetail?sid=119643">《了解》量子场论</a> </li>
-  <li> <a href="https://wwsj9688.xyz/">vpn之西部世界</a> </li>
-  <li> <a href="https://www.kaspersky.com.tw/downloads/free-vpn-secure-connection">vpn之卡巴斯基</a> </li>
-  <li> <a href="https://www.doc88.com/p-2902515598238.html">Python编程_从入门到实践</a> </li>
-
+  <li> <a href="https://xmsoushu.com/#/">电子书在线阅读、下载</a> </li>
 </ul>
  
  <p>"学习"网站:</p>
@@ -46,6 +43,6 @@
   <li> <a href="https://poki.cn/">经典“学习”集合网</a> </li>
 </ul>
 
-<p>热烈庆祝本网站成立一周月，现推出巨大优惠，只要用邮箱给我发一条信息或投稿便可获得随机软件安装包一份</p>
+<p>热烈庆祝本网站成立一周月，现推出巨大优惠，只要用邮箱给我发一条信息或投稿便可获得随机礼包一份</p>
 
 <p>HJQ Website Insider Preview Version 0.1.6    欢迎加入与我一起开发网站和投稿(什么题材都行，只要过审，即可发表)</p>
