--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<p>Hi,很高兴见到你,我是HJQ</p>
-<p>让我们从输入开始</p>
-<p>你是哪根葱</p>
+<p>Hi,很高兴见到你,我是HJQ,
+让我们从输入开始,
+你是哪根葱?</p>
 
  <div>
      <input id="loginname" type="text"  placeholder="某根葱"/>
@@ -13,8 +13,8 @@
 <input type="submit" />
 
 <p>海内存知己，天涯若比邻:</p>
-<p>邮箱:hunjingqi@outlook.com(推荐！隐秘性高,可以更好地"友好会面") <a href="https://www.microsoft.com/zh-cn/microsoft-365/outlook/email-and-calendar-software-microsoft-outlook/">注册outlook邮箱(由于微软服务器太慢，请耐心等待)</a> </p>
-<p>微信号:hjq97hjq97(不推荐!容易被家长和谐)</p>
+<p>邮箱:hunjingqi@outlook.com <a href="https://www.microsoft.com/zh-cn/microsoft-365/outlook/email-and-calendar-software-microsoft-outlook/">注册outlook邮箱(由于微软服务器太慢，请耐心等待)</a> </p>
+<p>微信号:hjq97hjq97(不推荐!容易被和谐)</p>
 
 <p>投稿区</p>
 
@@ -23,26 +23,22 @@
 
 <ul>
   <li> <a href="https://jts.egg404.cn/#/">检讨必备</a> </li>
-  <li> <a href="https://www.jiligamefun.com/486634.html">白嫖宇宙沙盘——由何骁宁提供(联系方式:SLA3D@outlook.com)</a> </li>
   <li> <a href="https://www.remove.bg/zh/upload">一键抠图</a> </li>
   <li> <a href="http://www.rubik.com.cn/">魔方小站</a> </li>
-  <li> <a href="https://www.wrfou.com/hacknet.html">白嫖Hacknet</a> </li>
-  <li> <a href="https://space.bilibili.com/17655178/channel/collectiondetail?sid=119643">《了解》量子场论</a> </li>
   <li> <a href="https://xmsoushu.com/#/">电子书在线阅读、下载</a> </li>
 </ul>
  
- <p>"学习"网站:</p>
+ <p>我爱"学习":</p>
 
 <ul>
   <li> <a href="https://www.html5tricks.com/demo/jiaoben1765/index.html">中国象棋</a> </li>
   <li> <a href="https://passer-by.com/pacman/">吃豆人</a> </li>
   <li> <a href="https://www.crazygames.com/">多维“学习”集合网</a> </li>
   <li> <a href="https://tetris.com/play-tetris">俄罗斯方块</a> </li>
-  <li> <a href="https://bruno-simon.com/">休闲"小练习"</a> </li>
   <li> <a href="http://hexgl.bkcore.com/play/">竞速"小练习"</a> </li>
   <li> <a href="https://poki.cn/">经典“学习”集合网</a> </li>
 </ul>
 
 <p>热烈庆祝本网站成立一周月，现推出巨大优惠，只要用邮箱给我发一条信息或投稿便可获得随机礼包一份</p>
 
-<p>HJQ Website Insider Preview Version 0.1.7    欢迎加入与我一起开发网站和投稿(什么题材都行，只要过审，即可发表)</p>
+<p>HJQ Website Insider Preview Version 0.1.7    欢迎加入与我一起开发网站和投稿(什么题材都行，只要过审即可公开展示)</p>
