--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
 <p>投稿区</p>
 
 
-<p>实用网站:</p>
+<p>我是勤劳的搬运工:</p>
 
 <ul>
   <li> <a href="https://jts.egg404.cn/#/">检讨必备</a> </li>
   <li> <a href="https://www.remove.bg/zh/upload">一键抠图</a> </li>
   <li> <a href="http://www.rubik.com.cn/">魔方小站</a> </li>
   <li> <a href="https://xmsoushu.com/#/">电子书在线阅读、下载</a> </li>
+  <li> <a href="https://3.jetbra.in/">jetbrains全家桶激活</a> </li>
 </ul>
  
  <p>我爱"学习":</p>
