--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-<p>Hi,很高兴见到你,我是HJQ,
-让我们从输入开始,
-你是哪根葱?</p>
+<p>Hi,很高兴见到你,我是HJQ,让我们从输入开始,你是哪根葱?</p>
 
  <div>
      <input id="loginname" type="text"  placeholder="某根葱"/>
@@ -26,7 +24,6 @@
   <li> <a href="https://www.remove.bg/zh/upload">一键抠图</a> </li>
   <li> <a href="http://www.rubik.com.cn/">魔方小站</a> </li>
   <li> <a href="https://xmsoushu.com/#/">电子书在线阅读、下载</a> </li>
-  <li> <a href="https://3.jetbra.in/">jetbrains全家桶激活</a> </li>
 </ul>
  
  <p>我爱"学习":</p>
@@ -38,6 +35,13 @@
   <li> <a href="https://tetris.com/play-tetris">俄罗斯方块</a> </li>
   <li> <a href="http://hexgl.bkcore.com/play/">竞速"小练习"</a> </li>
   <li> <a href="https://poki.cn/">经典“学习”集合网</a> </li>
+</ul>
+
+<p>我不信你不想白嫖：</p>
+<ul>
+  <li> <a href="https://otp.landian.vip/zh-cn/">office全家桶部署和激活</a> </li>
+  <li> <a href="https://3.jetbra.in/">jetbrains全家桶激活</a> </li>
+  
 </ul>
 
 <p>热烈庆祝本网站成立一周月，现推出巨大优惠，只要用邮箱给我发一条信息或投稿便可获得随机礼包一份</p>
