--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <ul>
   <li> <a href="https://otp.landian.vip/zh-cn/">office全家桶部署和激活</a> </li>
   <li> <a href="https://3.jetbra.in/">jetbrains全家桶激活</a> </li>
-  
+  <li> <a href="https://cmwtat.cloudmoe.com/cn.html">激活Windows10、11</a> </li>
 </ul>
 
 <p>热烈庆祝本网站成立一周月，现推出巨大优惠，只要用邮箱给我发一条信息或投稿便可获得随机礼包一份</p>
