--- a/index.html
+++ b/index.html
@@ -42,9 +42,7 @@
   <li> <a href="https://cmwtat.cloudmoe.com/cn.html">激活Windows10、11</a> </li>
   <li> <a href="https://otp.landian.vip/zh-cn/">office全家桶部署和激活</a> </li>
   <li> <a href="https://3.jetbra.in/">jetbrains全家桶激活</a> </li>
-  <li> <a href="https://www.dudues.com/">软件合集</a> </li>
+  <li>安装步骤请联系作者，远程安装5元一个软件</li>
 </ul>
-
-<p>热烈庆祝本网站成立一周月，现推出巨大优惠，只要用邮箱给我发一条信息或投稿便可获得随机礼包一份</p>
 
 <p>HJQ Website Insider Preview Version 0.1.7    欢迎加入与我一起开发网站和投稿(什么题材都行，只要过审即可公开展示)</p>
