--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
 <ul>
   <li> <a href="https://www.html5tricks.com/demo/jiaoben1765/index.html">中国象棋</a> </li>
+  <li> <a href="https://www.html5tricks.com/demo/wuziqi/index.html">五子棋</a> </li>
   <li> <a href="https://passer-by.com/pacman/">吃豆人</a> </li>
   <li> <a href="https://www.crazygames.com/">多维“学习”集合网</a> </li>
   <li> <a href="https://tetris.com/play-tetris">俄罗斯方块</a> </li>
