--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <p>海内存知己，天涯若比邻:</p>
 <p>邮箱:hunjingqi@outlook.com <a href="https://www.microsoft.com/zh-cn/microsoft-365/outlook/email-and-calendar-software-microsoft-outlook/">注册outlook邮箱(由于微软服务器太慢，请耐心等待)</a> </p>
-<p>微信号:hjq97hjq97(不推荐!容易被和谐)</p>
+<p>微信号:hjq97hjq97</p>
 
 <p>投稿区</p>
 
