--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <ul>
   <li> <a href="https://jts.egg404.cn/#/">检讨必备</a> </li>
   <li> <a href="https://www.remove.bg/zh/upload">一键抠图</a> </li>
-  <li> <a href="http://www.rubik.com.cn/">魔方小站</a> </li>
   <li> <a href="https://xmsoushu.com/#/">电子书在线阅读、下载</a> </li>
+  <li> <a href="https://www.upyunso.com/">网盘资源</a> </li>
 </ul>
  
  <p>我爱"学习":</p>
