--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <li> <a href="https://www.remove.bg/zh/upload">一键抠图</a> </li>
   <li> <a href="https://xmsoushu.com/#/">电子书在线阅读、下载</a> </li>
   <li> <a href="https://www.upyunso.com/">网盘资源</a> </li>
+  <li> <a href="https://www.xuebapan.com/">学习资源</a> </li>
 </ul>
  
  <p>我爱"学习":</p>
