--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <li> <a href="https://xmsoushu.com/#/">电子书在线阅读、下载</a> </li>
   <li> <a href="https://www.upyunso.com/">网盘资源</a> </li>
   <li> <a href="https://www.xuebapan.com/">学习资源</a> </li>
+  <li> <a href="https://www.code-nav.cn/">编程导航</a> </li>
 </ul>
  
  <p>我爱"学习":</p>
@@ -45,5 +46,5 @@
   <li> <a href="https://otp.landian.vip/zh-cn/">office全家桶部署和激活</a> </li>
   <li> <a href="https://3.jetbra.in/">jetbrains全家桶激活</a> </li>
 </ul>
-<p>更多软件和安装步骤请联系作者，远程安装5元一个软件</p>
-<p>HJQ Website Insider Preview Version 0.1.7    欢迎加入与我一起开发网站和投稿(什么题材都行，只要过审即可公开展示)</p>
+<p>更多软件和安装步骤请联系作者</p>
+<p>HJQ Website Insider Preview Version 0.1.8    欢迎加入与我一起开发网站和投稿(什么题材都行，只要过审即可公开展示)</p>
