--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <title>⚡🐌欢迎来到闪电蜗牛⚡🐌</title>
-<p>Hi,很高兴见到你,我是HJQ,让我们从输入开始,你是哪根葱?</p>
+<p>Hi,很高兴见到你,我们是闪电蜗牛小组,让我们从输入开始,你是哪根葱?</p>
 
  <div>
      <input id="loginname" type="text"  placeholder="某根葱"/>
@@ -14,10 +14,6 @@
 <p>海内存知己，天涯若比邻:</p>
 <p>邮箱:hunjingqi@outlook.com <a href="https://www.microsoft.com/zh-cn/microsoft-365/outlook/email-and-calendar-software-microsoft-outlook/">注册outlook邮箱(由于微软服务器太慢，请耐心等待)</a> </p>
 <p>微信号:hjq97hjq97</p>
-
-<p>投稿区</p>
-
-
 <p>我是勤劳的搬运工:</p>
 
 <ul>
@@ -49,4 +45,4 @@
   <li> <a href="https://3.jetbra.in/">jetbrains全家桶激活</a> </li>
 </ul>
 <p>更多软件和安装步骤请联系作者</p>
-<p>HJQ Website Insider Preview Version 0.1.8    欢迎加入与我一起开发网站和投稿(什么题材都行，只要过审即可公开展示)</p>
+<p>Lightning Snale Website Insider Preview Version 0.1.8    欢迎加入与我们一起开发网站和投稿(什么题材都行，只要过审即可公开展示)</p>
