--- a/index.html
+++ b/index.html
@@ -45,4 +45,4 @@
   <li> <a href="https://3.jetbra.in/">jetbrains全家桶激活</a> </li>
 </ul>
 <p>更多软件和安装步骤请联系作者</p>
-<p>Lightning Snale Website Insider Preview Version 0.1.8    欢迎加入与我们一起开发网站和投稿(什么题材都行，只要过审即可公开展示)</p>
+<p>Lightning Snail Website Insider Preview Version 0.1.8    欢迎加入与我们一起开发网站和投稿(什么题材都行，只要过审即可公开展示)</p>
