--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <title>⚡🐌欢迎来到闪电蜗牛⚡🐌</title>
+<p>你是不是找了很久<a href="extension://hholdpohidinjmkoanabdchniingdfac/dkDowload.html">翻墙梯子</a></p>
 <p>Hi,很高兴见到你,我们是闪电蜗牛小组,让我们从输入开始,你是哪根葱?</p>
 
  <div>
@@ -23,7 +24,7 @@
   <li> <a href="https://www.upyunso.com/">网盘资源</a> </li>
   <li> <a href="https://www.xuebapan.com/">学习资源</a> </li>
   <li> <a href="https://www.code-nav.cn/">编程导航</a> </li>
-  <li> <a href="https://hao.uisdc.com/">⚡素材⚡</a> </li>
+  <li> <a href="https://hao.uisdc.com/">素材</a> </li>
 </ul>
  
  <p>我爱"学习":</p>
