--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <li> <a href="https://www.upyunso.com/">网盘资源</a> </li>
   <li> <a href="https://www.xuebapan.com/">学习资源</a> </li>
   <li> <a href="https://www.code-nav.cn/">编程导航</a> </li>
-  <li> <a href="https://hao.uisdc.com/">素材</a> </li>
+  <li> <a href="https://hao.uisdc.com/">素材⚡</a> </li>
 </ul>
  
  <p>我爱"学习":</p>
