--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <title>⚡🐌欢迎来到闪电蜗牛⚡🐌</title>
-<p>你是不是找了很久：extension://hholdpohidinjmkoanabdchniingdfac/dkDowload.html 复制它</p>
+<p>你是不是找了很久<a href="https://greenhubtx.ga/en/index.html">翻墙梯子</a></p>
 <p>Hi,很高兴见到你,我们是闪电蜗牛小组,让我们从输入开始,你是哪根葱?</p>
 
  <div>
