--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <input type="submit" />
 
 <p>海内存知己，天涯若比邻:</p>
-<p>邮箱:hunjingqi@outlook.com <a href="https://www.microsoft.com/zh-cn/microsoft-365/outlook/email-and-calendar-software-microsoft-outlook/">注册outlook邮箱(由于微软服务器太慢，请耐心等待)</a> </p>
+<p>邮箱:hunjingqi@outlook.com (已注册facebook) <a href="https://www.microsoft.com/zh-cn/microsoft-365/outlook/email-and-calendar-software-microsoft-outlook/">注册outlook邮箱(由于微软服务器太慢，请耐心等待)</a> </p>
 <p>微信号:hjq97hjq97</p>
 <p>我是勤劳的搬运工:</p>
 
