--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<title>⚡🐌欢迎来到闪电蜗牛⚡🐌</title>
+<title>🫐🧪欢迎来到莓用科技🍓💻</title>
 <p>你是不是找了很久<a href="https://greenhubtx.ga/en/index.html">翻墙梯子</a></p>
-<p>Hi,很高兴见到你,我们是闪电蜗牛小组,让我们从输入开始,你是哪根葱?</p>
+<p>Hi,很高兴见到你,这里是莓用科技,让我们从输入开始,你是哪根葱?</p>
 
  <div>
      <input id="loginname" type="text"  placeholder="某根葱"/>
@@ -46,4 +46,4 @@
   <li> <a href="https://3.jetbra.in/">jetbrains全家桶激活</a> </li>
 </ul>
 <p>更多软件和安装步骤请联系作者</p>
-<p>Lightning Snail Website Insider Preview Version 0.1.8    欢迎加入与我们一起开发网站和投稿(什么题材都行，只要过审即可公开展示)</p>
+<p>Useless Technology Website Insider Preview Version 0.1.8    欢迎加入与我们一起开发网站和投稿(什么题材都行，只要过审即可公开展示)</p>
