--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <title>🫐🧪欢迎来到莓用科技🍓💻</title>
-<p>你是不是找了很久<a href="https://greenhubtx.ga/en/index.html">翻墙梯子</a></p>
 <p>Hi,很高兴见到你,这里是莓用科技,让我们从输入开始,你是哪根葱?</p>
 
  <div>
@@ -24,7 +23,8 @@
   <li> <a href="https://www.upyunso.com/">网盘资源</a> </li>
   <li> <a href="https://www.xuebapan.com/">学习资源</a> </li>
   <li> <a href="https://www.code-nav.cn/">编程导航</a> </li>
-  <li> <a href="https://hao.uisdc.com/">素材⚡</a> </li>
+  <li> <a href="https://hao.uisdc.com/">素材</a> </li>
+  <li> <a href="https://greenhubtx.ga/en/index.html">翻墙梯子伽速器</a> <li>
 </ul>
  
  <p>我爱"学习":</p>
@@ -37,6 +37,7 @@
   <li> <a href="https://tetris.com/play-tetris">俄罗斯方块</a> </li>
   <li> <a href="http://hexgl.bkcore.com/play/">竞速"小练习"</a> </li>
   <li> <a href="https://poki.cn/">经典“学习”集合网</a> </li>
+  <li> <a href="http://ldywayne.com/%E9%B8%A1%E4%B9%90%E7%9B%92/jiyuehe.html">你是不是XHZ</a> </li>
 </ul>
 
 <p>我不信你不想白嫖：</p>
