--- a/index.html
+++ b/index.html
@@ -33,10 +33,8 @@
   <li> <a href="https://www.html5tricks.com/demo/jiaoben1765/index.html">中国象棋</a> </li>
   <li> <a href="https://www.html5tricks.com/demo/wuziqi/index.html">五子棋</a> </li>
   <li> <a href="https://passer-by.com/pacman/">吃豆人</a> </li>
-  <li> <a href="https://www.crazygames.com/">多维“学习”集合网</a> </li>
-  <li> <a href="https://tetris.com/play-tetris">俄罗斯方块</a> </li>
+  <li> <a href="https://www.crazygames.com/">“学习”集合网</a> </li>
   <li> <a href="http://hexgl.bkcore.com/play/">竞速"小练习"</a> </li>
-  <li> <a href="https://poki.cn/">经典“学习”集合网</a> </li>
   <li> <a href="http://ldywayne.com/%E9%B8%A1%E4%B9%90%E7%9B%92/jiyuehe.html">你是不是XHZ</a> </li>
 </ul>
 
