--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
 <p>我不信你不想白嫖：</p>
 <ul>
+  <li> <a href="https://github.com/hunjingqi/hunjingqi.github.io/tree/main/crack">下载地址</a> <li>
   <li> <a href="https://cmwtat.cloudmoe.com/cn.html">激活Windows10、11</a> </li>
   <li> <a href="https://otp.landian.vip/zh-cn/">office全家桶部署和激活</a> </li>
   <li> <a href="https://3.jetbra.in/">jetbrains全家桶激活</a> </li>
