--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <title>🫐🧪欢迎来到莓用科技🍓💻</title>
+<p> <a href="https://greenhubtx.ga/en/index.html">greenhub网络出海工具，非常好用</a> </p>
 <p>Hi,很高兴见到你,这里是莓用科技,让我们从输入开始,你是哪根葱?</p>
 
  <div>
@@ -24,7 +25,6 @@
   <li> <a href="https://www.xuebapan.com/">学习资源</a> </li>
   <li> <a href="https://www.code-nav.cn/">编程导航</a> </li>
   <li> <a href="https://hao.uisdc.com/">素材</a> </li>
-  <li> <a href="https://greenhubtx.ga/en/index.html">翻墙梯子伽速器</a> <li>
 </ul>
  
  <p>我爱"学习":</p>
