--- a/index.html
+++ b/index.html
@@ -26,8 +26,18 @@
   <li> <a href="https://hao.uisdc.com/">素材</a> </li>
 </ul>
  
- <p>我爱"学习":</p>
+<p>ChatGPT国内镜像网站:</p>
 
+<ul>
+  <li> <a href="https://chat.yongmai.xyz/">地址一</a> </li>
+  <li> <a href="https://aigcfun.com/">地址二</a> </li>
+  <li> <a href="https://qwq.ovh/">地址三</a> </li>
+  <li> <a href="https://chat.forchange.cn/">地址四</a> </li>
+  <li> <a href="https://xc.com/">地址五</a> </li>
+  <li> <a href="http://gpt.zbooks.top/chat/">地址六</a> </li>
+</ul>
+
+<p>我爱"学习":</p>
 <ul>
   <li> <a href="https://www.html5tricks.com/demo/jiaoben1765/index.html">中国象棋</a> </li>
   <li> <a href="https://www.html5tricks.com/demo/wuziqi/index.html">五子棋</a> </li>
