--- a/index.html
+++ b/index.html
@@ -12,20 +12,8 @@
 <input type="submit" />
 
 <p>海内存知己，天涯若比邻:</p>
-<p>邮箱:hunjingqi@outlook.com (已注册facebook) <a href="https://www.microsoft.com/zh-cn/microsoft-365/outlook/email-and-calendar-software-microsoft-outlook/">注册outlook邮箱(由于微软服务器太慢，请耐心等待)</a> </p>
+<p>邮箱:hunjingqi@outlook.com <a href="https://www.microsoft.com/zh-cn/microsoft-365/outlook/email-and-calendar-software-microsoft-outlook/">注册outlook邮箱(由于微软服务器太慢，请耐心等待)</a> </p>
 <p>微信号:hjq97hjq97</p>
-<p>我是勤劳的搬运工:</p>
-
-<ul>
-  <li> <a href="https://jts.egg404.cn/#/">检讨必备</a> </li>
-  <li> <a href="https://www.remove.bg/zh/upload">一键抠图</a> </li>
-  <li> <a href="https://xmsoushu.com/#/">电子书在线阅读、下载</a> </li>
-  <li> <a href="https://www.upyunso.com/">网盘资源</a> </li>
-  <li> <a href="https://www.xuebapan.com/">学习资源</a> </li>
-  <li> <a href="https://www.code-nav.cn/">编程导航</a> </li>
-  <li> <a href="https://hao.uisdc.com/">素材</a> </li>
-</ul>
- 
 <p>ChatGPT国内镜像网站:</p>
 
 <ul>
@@ -35,6 +23,10 @@
   <li> <a href="https://chat.forchange.cn/">地址四</a> </li>
   <li> <a href="https://xc.com/">地址五</a> </li>
   <li> <a href="http://gpt.zbooks.top/chat/">地址六</a> </li>
+  <li> <a href="https://chatgpt.scholarcn.com/">地址七</a> </li>
+  <li> <a href="https://ichat.scholarcn.com/">地址八</a> </li>
+  <li> <a href="https://ichat.scholarcn.com/">地址九</a> </li>
+  <li> <a href="chat.wxredcover.cn">地址十</a> </li>
 </ul>
 
 <p>我爱"学习":</p>
@@ -47,12 +39,4 @@
   <li> <a href="http://ldywayne.com/%E9%B8%A1%E4%B9%90%E7%9B%92/jiyuehe.html">你是不是XHZ</a> </li>
 </ul>
 
-<p>我不信你不想白嫖：</p>
-<ul>
-  <li> <a href="https://github.com/hunjingqi/hunjingqi.github.io/tree/main/crack">下载地址</a> <li>
-  <li> <a href="https://cmwtat.cloudmoe.com/cn.html">激活Windows10、11</a> </li>
-  <li> <a href="https://otp.landian.vip/zh-cn/">office全家桶部署和激活</a> </li>
-  <li> <a href="https://3.jetbra.in/">jetbrains全家桶激活</a> </li>
-</ul>
-<p>更多软件和安装步骤请联系作者</p>
-<p>Useless Technology Website Insider Preview Version 0.1.8    欢迎加入与我们一起开发网站和投稿(什么题材都行，只要过审即可公开展示)</p>
+<p>Useless Technology Website Insider Preview Version 0.1.9</p>
