--- a/index.html
+++ b/index.html
@@ -14,19 +14,18 @@
 <p>海内存知己，天涯若比邻:</p>
 <p>邮箱:hunjingqi@outlook.com <a href="https://www.microsoft.com/zh-cn/microsoft-365/outlook/email-and-calendar-software-microsoft-outlook/">注册outlook邮箱(由于微软服务器太慢，请耐心等待)</a> </p>
 <p>微信号:hjq97hjq97</p>
-<p>ChatGPT国内镜像网站:</p>
+<p>ChatGPT:</p>
 
 <ul>
-  <li> <a href="https://chat.yongmai.xyz/">地址一</a> </li>
-  <li> <a href="https://aigcfun.com/">地址二</a> </li>
-  <li> <a href="https://qwq.ovh/">地址三</a> </li>
-  <li> <a href="https://chat.forchange.cn/">地址四</a> </li>
-  <li> <a href="https://xc.com/">地址五</a> </li>
-  <li> <a href="http://gpt.zbooks.top/chat/">地址六</a> </li>
-  <li> <a href="https://chatgpt.scholarcn.com/">地址七</a> </li>
-  <li> <a href="https://ichat.scholarcn.com/">地址八</a> </li>
-  <li> <a href="https://ichat.scholarcn.com/">地址九</a> </li>
-  <li> <a href="chat.wxredcover.cn">地址十</a> </li>
+  <li> <a href="https://chat.yongmai.xyz/">国内地址一</a> </li>
+  <li> <a href="https://aigcfun.com/">国内地址二</a> </li>
+  <li> <a href="https://qwq.ovh/">国内地址三</a> </li>
+  <li> <a href="https://chat.forchange.cn/">国内地址四</a> </li>
+  <li> <a href="https://xc.com/">国内地址五</a> </li>
+  <li> <a href="http://gpt.zbooks.top/chat/">国内地址六</a> </li>
+  <li> <a href="https://chatgpt.scholarcn.com/">国内地址七</a> </li>
+  <li> <a href="https://ichat.scholarcn.com/">国内地址八</a> </li>
+  <li> <a href="https://ichat.scholarcn.com/">国内地址九</a> </li>
 </ul>
 
 <p>我爱"学习":</p>
