--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<title>🫐🧪欢迎来到莓用科技🍓💻</title>
-<p>Hi,很高兴见到你,这里是莓用科技,让我们从输入开始,你是哪根葱?</p>
+<title>🫐🧪欢迎来到霉用科技🍓💻</title>
+<p>Hi,很高兴见到你,这里是霉用科技,让我们从输入开始,你是哪根葱?</p>
 
  <div>
      <input id="loginname" type="text"  placeholder="某根葱"/>
