--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <li> <a href="https://chatgpt.scholarcn.com/">国内地址七</a> </li>
   <li> <a href="https://ichat.scholarcn.com/">国内地址八</a> </li>
   <li> <a href="https://ichat.scholarcn.com/">国内地址九</a> </li>
+  <li> <a href="https://chat.feng.to/">想用自己API又不想翻墙的戳这里</a> </li>
 </ul>
 
 <p>我爱"学习":</p>
