--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
   <li> <a href="https://chat.forchange.cn/">国内地址四</a> </li>
   <li> <a href="https://xc.com/">国内地址五</a> </li>
   <li> <a href="http://gpt.zbooks.top/chat/">国内地址六</a> </li>
-  <li> <a href="https://chatgpt.scholarcn.com/">国内地址七</a> </li>
-  <li> <a href="https://ichat.scholarcn.com/">国内地址八</a> </li>
-  <li> <a href="https://ichat.scholarcn.com/">国内地址九</a> </li>
+  <li> <a href="http://datashare.tk:8080/">国内地址七</a> </li>
+  <li> <a href="https://chatgpt.scholarcn.com/">国内地址八(访问密码请联系作者获取)</a> </li>
+  <li> <a href="https://ichat.scholarcn.com/">国内地址九(访问密码请联系作者获取)</a> </li>
+  <li> <a href="https://ichat.scholarcn.com/">国内地址十(访问密码请联系作者获取)</a> </li>
   <li> <a href="https://chat.feng.to/">想用自己API又不想翻墙的戳这里</a> </li>
 </ul>
 
