--- a/index.html
+++ b/index.html
@@ -170,8 +170,6 @@
 			    			</div>
 
 							</div>
-</div>
-<head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
 	<title>火星文生成工具</title>
@@ -240,7 +238,7 @@ function $(id){return document.getElementById(id);}function copy(ob) {var obj=fi
 				<div class="weui-cells weui-cells_form">
 					<div class="weui-cell">
 						<div class="weui-cell__bd">
-							<textarea id="txt" class="weui-textarea" name="textarea" placeholder="我爱你" rows="3"></textarea>
+							<textarea id="txt" class="weui-textarea" name="textarea" placeholder="霉用科技" rows="3"></textarea>
 							<!-- <div class="weui-textarea-counter"><span>0</span>/200</div> -->
 						</div>
 					</div>
@@ -257,6 +255,4 @@ function $(id){return document.getElementById(id);}function copy(ob) {var obj=fi
 
 							</div>
 	</div>
-</body>
-</html>
 <p>Useless Technology Website Insider Preview Version 0.2.0</p>
